# task_block_functions

./: .gitignore  README.md  pyproject.toml
block_func/scripts/: task10_more_decorators.py  task11_recursion.py  task1_greet.py  task2_get_colors.py  task3_updated.py  task4_call_twice.py  task5_filter_map.py  task6_mfr.py  task7_closure.py  task8_lambda.py  task9_decorators.py  task_color_inverse.py  task_compose.py  task_counted_by_year.py  task_enlarge.py  task_filter_anagram.py  task_find_index_nearest.py  task_histo.py  task_ip4_convert.py  task_nrzi_decode.py  task_parity_filter.py  task_valid_ipv6.py
