[tool.poetry]
name = "block_functions"
version = "0.1.0"
description = "практические задания из блока курса про функции"
authors = ["alexandertarakanov <alex.artoff@gmail.com>"]
packages = [{include = "block_func"},]

[tool.poetry.scripts]
t1-greet = "block_func.scripts.task1_greet:main"
t2-get-color = "block_func.scripts.task2_get_colors:main"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
